[package]
name = "dostime"
version = "0.2.0"
edition = "2021"
description = "A Rust crate that converts to and from MS DOS dates and times."
readme = "README.md"
repository = "https://github.com/abus-sh/dostime"
license = "GPL-3.0-or-later"
keywords = ["DOS", "date", "time", "datetime"]
categories = ["date-and-time"]

[dependencies]

[features]
default = ["std"]
std = []
