[package]
name = "dostime"
version = "2.0.0"
edition = "2021"
description = "A Rust crate that converts to and from MS DOS dates and times."
readme = "README.md"
repository = "https://github.com/abus-sh/dostime"
license = "GPL-3.0-or-later"
keywords = ["DOS", "date", "time", "datetime"]
categories = ["date-and-time"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true, default-features = false }
time = { version = "0.3", optional = true, default-features = false }
chrono = { version = "0.4", optional = true, default-features = false }

[features]
serde-1 = ["serde", "serde_derive"]
time-1 = ["time"]
chrono-1 = ["chrono"]
